# distributed-computing-ray

./: .gitignore  assume-role.json  client_id_youtube_api  db.db  design-doc.txt  devtools_network.py  download-fb-video.py  fbtest.py  fetch_audio_selemium.py  minimal-manual.yaml  ray-launcher.yaml  requirements-dev.txt  requirements.txt  scrape_links_facebook.py  simple_youtube_api.py  test_download_fb.py  upload_yt.py  utils.py
.ipynb_checkpoints/: fb_api-checkpoint.ipynb
db/: models.py
docker/: compose.yml
scratchbook/: Untitled.ipynb  fb_api.ipynb  test.py
scratchbook/.ipynb_checkpoints/: fb_api-checkpoint.ipynb
sermon-finder/: .isort.cfg  alembic.ini  requirements-dev.in  requirements-tests.in  requirements.in  requirements.txt  setup.cfg
sermon-finder/sermon_finder/: __init__.py  actor.py  remotes.py
sermon-finder/sermon_finder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
sermon-finder/sermon_finder/alembic/: env.py
sermon-finder/sermon_finder/alembic/versions/: 7ff77bdaeb01_add_video_id_column.py  f29c20a53ae6_add_sermons_table.py
sermon-finder/sermon_finder/models/: __init__.py  db.py  meta.py
sermon-finder/sermon_finder/utils/: __init__.py  s3.py  utils.py
