[metadata]
name = sermon-finder
version = 0.1.0
description = A python package to aggregate sermons and create a searchable catalog
authors = ["jmwenda56@gmail.com"]

[options]
include_package_data = True
packages = find:

install_requires =
    click >= 8.0.0
    typer >= 0.9.0

[options.extras_require]
tests =
    pytest>=6.0.1
dev =
    ipython >= 8.14.0
    pre-commit >= 3.3.0
    jupyterlab >= 4.0.0
    notebook >= 6.5.4
    typer[all] >= 0.9.0
    SQLAlchemy >= 2.0.30
    alembic == 1.13.2


[options.entry_points]
console_scripts =
    sermon_finder = sermon_finder:sermon_finder
[flake8]
enable-extensions = G
ignore = E203,E501,E704,W503
# E203 - whitespace before ':' - now recommended
# E501 too long line (80chars+) - handled by black
# E704 not unanimously accepted; black rejects
# W503 line break before binary operator - now recommended

